Config tool to collapse plugins, show op id, and remove 'try it out'

--- a/tool/index.html
+++ b/tool/index.html
@@ -49,8 +49,14 @@
         plugins: [
           SwaggerUIBundle.plugins.DownloadUrl
         ],
-        layout: "StandaloneLayout"
-      })
+        layout: "StandaloneLayout",
+        // Added:
+        deepLinking: true,
+        displayOperationId: true,
+        docExpansion: "none",
+        filter: true,
+        supportedSubmitMethods: [] // Disable "Try it out".
+      });
       // End Swagger UI call region
 
       window.ui = ui
